--- a/affair.html
+++ b/affair.html
@@ -1354,7 +1354,7 @@
       <div class="accordion-body">
       The Reserve Bank of India is <Strong>India's Central Bank <i>Formed on 1 April 1935</i> and was nationalised on 1 January 1949.</Strong>The Reserve Bank of India was established in 1934, under the Reserve Bank of India Act.Though privately owned initially, it was nationalised in 1949 and since then fully owned by the Ministry of Finance, Goverment of India(GOI).
       <ul>
-        <li>Governor : <strong>Shaktikanta Das</strong></li>
+        <li>Governor : <strong>Sanjay Malhotra</strong></li>
         <li>Deputy Governor : <strong>M. Rajeshwar Rao, Swaminathan J, T. Rabi Sankar, Dr. M.D. Patra</strong></li>
         <li>Headquater : <strong>Mumbai, Maharashtra</strong></li>
       </ul>
@@ -1415,21 +1415,21 @@
     <div id="collapsethree2" class="accordion-collapse collapse" data-bs-parent="#accordionExample2">
       <div class="accordion-body">
           <ul><strong>Lending Rates</strong>
-            <li>Policy Repo Rate : <strong>6.50%</strong>  
+            <li>Policy Repo Rate : <strong>6.25%</strong>  
               <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb1" aria-controls="offcanvasTop">Details</button>
             </li>
-            <li>MSF Rate : <strong>6.75%</strong>  
+            <li>MSF Rate : <strong>6.50%</strong>  
               <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb2" aria-controls="offcanvasTop">Details</button>
             </li>
-            <li>Bank Rate : <strong>6.75%</strong>  
+            <li>Bank Rate : <strong>6.50%</strong>  
               <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb3" aria-controls="offcanvasTop">Details</button>
             </li>
           </ul>
           <ul><strong>Borrowing Rates</strong>
-            <li>Reverse Repo Rate : <strong>3.55%</strong>  
+            <li>Reverse Repo Rate : <strong>3.35%</strong>  
               <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb4" aria-controls="offcanvasTop">Details</button>
             </li>
-            <li>SDF Rate : <strong>6.25%</strong>  
+            <li>SDF Rate : <strong>6.00%</strong>  
               <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb5" aria-controls="offcanvasTop">Details</button>
             </li>
             <li>SLR Rate : <strong>18.00%</strong>  
@@ -1437,7 +1437,7 @@
             </li>
           </ul>
           <ul><Strong>Regulatory Ratios</Strong>
-            <li>CRR Rate : <strong>4.50%</strong>  
+            <li>CRR Rate : <strong>4.00%</strong>  
             <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#srbb6" aria-controls="offcanvasTop">Details</button>
             </li>
           </ul> 
