--- a/affair.html
+++ b/affair.html
@@ -46,7 +46,7 @@
             <tr>
               <th scope="row">1</th>
               <td>Agriculture and Farmers welfare
-                <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr11" aria-controls="offcanvasTop">Details</button>
+                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr11" aria-controls="offcanvasTop">Details</button>
               </td>
               <td>Shivraj Singh Chouhan 
                 <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sr12" aria-controls="offcanvasTop">Details</button>
